--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -1,9 +1,10 @@
 {#// /extends my main page which contains navbar footer ....etc*/#}
 {% extends 'base.html.twig' %}
+
 {% block body %}
-{# Header Page title #}
-<h1>Welcome To Home Page </h1>
-<p>
+    {# Header Page title #}
+    <h1>Welcome To About Us Page</h1>
+    <p>
         هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء لصفحة ما سيلهي القارئ عن
         التركيز على الشكل الخارجي للنص أو شكل توضع الفقرات في الصفحة التي يقرأها. ولذلك
         يتم استخدام طريقة لوريم إيبسوم لأنها تعطي توزيعاَ طبيعياَ -إلى حد ما- للأحرف
