--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,11 +50,11 @@
                         <!-- Left Side Of Navbar -->
                         <ul class="navbar-nav mr-auto float">
                             <li>
-                                <a href="#" class=" btn btn-secondary">Home</a>
+                                <a href="/" class=" btn btn-secondary">Home</a>
                             </li>
                             &nbsp;
                             <li>
-                                <a href="#" class=" btn btn-secondary">About-us</a>
+                                <a href="/about" class=" btn btn-secondary">About-us</a>
                             </li>
                             &nbsp;
                             <li>
@@ -70,7 +70,7 @@
                             </li>
                             &nbsp;
                             <li>
-                                <a href="#" class=" btn btn-secondary">Contact-us</a>
+                                <a href="/contact" class=" btn btn-secondary">Contact-us</a>
                             </li>
                         </ul>
                     </div>
@@ -82,7 +82,7 @@
         {% block javascripts %}{% endblock %}
         <!-- Footer -->
    <footer id="footer" class=" bg-dark text-white p-4 mt-5 text-center">
-        <p>All rights reserved To Elmardi YAHIA </p>
+        <p> All rights reserved To Elmardi YAHIA   </p> 
       </footer>
         </div>
     </body>
