--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,11 +78,15 @@
             </nav>
         </div>
         <hr>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block body %}
+        
+        {% endblock %}
+        {% block javascripts %}
+
+        {% endblock %}
         <!-- Footer -->
    <footer id="footer" class=" bg-dark text-white p-4 mt-5 text-center">
-        <p> All rights reserved To Elmardi YAHIA   </p> 
+        <p> All rights reserved To Elmardi YAHIA @copyright 2018 !!!! </p> 
       </footer>
         </div>
     </body>
