--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 {# Header Page title #}
 <h1>Welcome To Contact-Us Page </h1>
+{#Start form contact#}
 <form action="#" method="POST">
     <div class="form-group">
         <label for="title">Name</label>
@@ -24,4 +25,5 @@
     <button type="submit" class="btn btn-outline-primary"> Send</button>
     </div>
     </form>
+    {#End form contact#}
 {% endblock %}
