--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,19 +50,19 @@
                         <!-- Left Side Of Navbar -->
                         <ul class="navbar-nav mr-auto float">
                             <li>
-                                <a href="/" class=" btn btn-secondary">Home</a>
+                                <a href="{{ path('home') }}" class=" btn btn-secondary">Home</a>
                             </li>
                             &nbsp;
                             <li>
-                                <a href="/about" class=" btn btn-secondary">About-us</a>
+                                <a href="{{ path('about_us') }}" class=" btn btn-secondary">About-us</a>
                             </li>
                             &nbsp;
                             <li>
-                                <a href="#" class=" btn btn-secondary">Articless</a>
+                                <a href="{{ path('articles') }}" class=" btn btn-secondary">Articless</a>
                             </li>
                             &nbsp;
                             <li>
-                                <a href="#" class=" btn btn-secondary">Stories</a>
+                                <a href="{{ path('articles') }}" class=" btn btn-secondary">Stories</a>
                             </li>
                             &nbsp;
                             <li>
@@ -70,7 +70,7 @@
                             </li>
                             &nbsp;
                             <li>
-                                <a href="/contact" class=" btn btn-secondary">Contact-us</a>
+                                <a href="{{ path('contact_us') }}" class=" btn btn-secondary">Contact-us</a>
                             </li>
                         </ul>
                     </div>
